[tool.poetry]
name = "oonidata"
version = "0.2.1"
description = ""
authors = ["Arturo Filastò <arturo@filasto.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
boto3 = "^1.24.2"
PyYAML = "^6.0"
tqdm = "^4.64.0"
lz4 = "^4.0.1"
requests = "^2.27.1"
cryptography = "^38.0.2"
clickhouse-driver = "^0.2.3"
lxml = "^4.9.0"
maxminddb = "^2.2.0"
orjson = "^3.8.0"
mashumaro = "^3.0.4"
pyOpenSSL = "^22.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^22.3.0"
snakeviz = "^2.1.1"
mypy = "^0.961"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
