[tool.poetry]
name = "oonidata"
version = "0.2.3"
description = ""
authors = ["Arturo Filastò <arturo@filasto.net>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
boto3 = ">=1.24"
PyYAML = ">=6.0"
tqdm = ">=4.64"
lz4 = ">=4.0"
requests = ">=2.27"
cryptography = ">=38.0.3"
clickhouse-driver = ">=0.2"
click = ">=8.0.0"
lxml = ">=4.9"
maxminddb = ">=2.2"
orjson = ">=3.8"
mashumaro = ">=3.0"
pyOpenSSL = ">=22.1"
importlib-metadata = {version = ">=1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
pytest = ">=7.2"
pytest-cov = ">=3.0.0"
black = ">=22.3.0"
snakeviz = ">=2.1.1"
mypy = ">=0.961"
pytest-benchmark = "^4.0.0"

[tool.poetry.scripts]
oonidata = 'oonidata.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
