[tool.poetry]
name = "oonidata"
version = "0.2.3"
description = ""
authors = ["Arturo Filastò <arturo@filasto.net>"]

[tool.poetry.dependencies]
python = ">=3.8,<4"
boto3 = ">=1.24"
PyYAML = ">=6.0"
tqdm = ">=4.64"
lz4 = ">=4.0"
requests = ">=2.27"
cryptography = ">=38.0.3"
clickhouse-driver = ">=0.2"
click = ">=8.0.0"
lxml = ">=4.9"
maxminddb = ">=2.2"
orjson = ">=3.8"
mashumaro = ">=3.0"
pyOpenSSL = ">=22.1"
importlib-metadata = {version = ">=1.0", python = "<3.8"}
tabulate = "^0.9.0"
warcio = "^1.7.4"
msgpack = "^1.0.4"
statsd = "^4.0.1"
dask = {extras = ["complete"], version = "^2023.3.2"}
altair = {version = "^4.2.0", optional = true}
numpy = {version = "^1.23.5", optional = true, python = ">=3.8"}
pandas = {version = "^2.0.0", optional = true, python = ">=3.8"}
flask = {version = "^2.2.2", optional = true}

[tool.poetry.dev-dependencies]
pytest = ">=7.2"
pytest-cov = ">=3.0.0"
black = ">=22.3.0"
snakeviz = ">=2.1.1"
mypy = ">=0.961"
pytest-benchmark = "^4.0.0"
pytest-profiling = "^1.7.0"
memray = "^1.4.1"
viztracer = "^0.15.6"

[tool.poetry.scripts]
oonidata = 'oonidata.cli:cli'

[tool.poetry.extras]
dataviz = ["altair", "numpy", "pandas", "flask"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
