[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oonidata"
dynamic = ["version"]
description = ""
authors = [{ name = "OONI", email = "contact@ooni.org" }]

dependencies = [
  "boto3 ~= 1.24",
  "PyYAML ~= 6.0",
  "tqdm ~= 4.64",
  "lz4 ~= 4.0",
  "requests ~= 2.27",
  "cryptography ~= 38.0.3",
  "click == 8.2.1",
  "lxml ~= 4.9",
  "orjson ~= 3.8",
  "mashumaro ~= 3.0",
  "pyOpenSSL ~= 22.1",
  "tabulate ~= 0.9.0",
  "click-loglevel ~= 0.5.0",
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/oonidata"]


[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "snakeviz",
  "mypy",
  "pytest-benchmark",
  "pytest-profiling",
  "memray",
  "viztracer",
]
path = ".venv/"

[tool.hatch.version]
path = "src/oonidata/__about__.py"

[tool.hatch.envs.default.scripts]
oonidata = "python -m oonidata.main {args}"
test = "pytest {args:tests}"
test-cov = "pytest -s --full-trace --log-level=INFO  --log-cli-level=INFO -v --setup-show --cov=./ --cov-report=xml --cov-report=html --cov-report=term {args:tests}"
cov-report = ["coverage report"]
cov = ["test-cov", "cov-report"]
