[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oonipipeline"
dynamic = ["version"]
description = ""
authors = [{ name = "OONI", email = "contact@ooni.org" }]

dependencies = [
  "boto3 ~= 1.24",
  "PyYAML ~= 6.0",
  "tqdm ~= 4.64",
  "lz4 ~= 4.0",
  "requests ~= 2.27",
  "cryptography ~= 38.0.3",
  "clickhouse-driver ~= 0.2",
  "click ~= 8.0.0",
  "lxml ~= 4.9",
  "maxminddb ~= 2.2",
  "orjson ~= 3.8",
  "mashumaro ~= 3.0",
  "pyOpenSSL ~= 22.1",
  "fastapi ~= 0.108.0",
  "tabulate ~= 0.9.0",
  "warcio ~= 1.7.4",
  "msgpack ~= 1.0.4",
  "statsd ~= 4.0.1",
  "click-loglevel ~= 0.5.0",
  "dask ~= 2023.3.2",
  "altair ~= 4.2.0",
  "numpy ~= 1.23.5",
  "pandas ~= 2.0.0",
  "flask ~= 2.2.0",
  "jupyterlab ~= 4.0.7",
  "temporalio ~= 1.5.1",
]

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/oonipipeline", "src/oonidata"]


[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "black",
  "snakeviz",
  "mypy",
  "pytest-benchmark",
  "pytest-profiling",
  "memray",
  "viztracer",
  "pytest-docker",
]
python = "3.11"
path = ".venv/"

[tool.hatch.version]
path = "src/oonipipeline/__about__.py"

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest -s --full-trace --log-level=INFO  --log-cli-level=INFO -v --setup-show --cov=./ --cov-report=xml --cov-report=html --cov-report=term {args:tests}"
cov-report = ["coverage report"]
cov = ["test-cov", "cov-report"]
